# Celexta

./: .bumpversion.cfg  .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt
celexta/: __init__.py  about.py  abstract_models.py  aesthetics.py  candidates.py  catalogs.py  controller.py  custom_tab.py  decorators.py  error_handling.py  examples.py  finding_chart_generator.py  frames.py  gcn_maker.py  initialize.py  io_gui.py  main_gui.py  main_window.py  mpl.py  regions.py  svom_fsc.py  tables.py  toolbar.py  utils.py  widgets.py
celexta/config/: GCN_authors.csv  default_config.yaml  user_config.yaml
celexta/ui/: FindingChartGenerator.ui  GCN_maker.ui  about.ui  main_gui.ui
celexta/windows/: FindingChartGeneratorWindow.py  GcnMakerWindow.py  MainGui.py  MainWindow.py  __init__.py
dev/notebooks/: Qcombobox_tests.ipynb  QlineEdit_tests.ipynb  Sandbox.ipynb
dev/scripts/: test_NE_arrows_pyqtgraph.py  test_catalog_query.py  test_collapsable_panel.py  test_collapsable_panel2.py  test_dopdown_list.py  test_flip_img_pyqt.py  test_latex.py  test_loading_bar.py  test_open_files_dialog.py  test_pyqt_dial.py  test_pyqt_rotation.py  test_radec_grid_pyqt.py  test_tables.py  test_tabs.py  test_toolbar_pyqt.py
docs/source/: conf.py  index.rst
